--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Intellectual property'
 - !lcc 'K'
 - !lcsh 'Public domain (Copyright law)'
+- GITenberg
 tableOfContents: 'Why intellectual property? -- Thomas Jefferson writes a letter --
   The second enclosure movement -- The Internet threat -- The farmer''s tale: an allegory
   -- I got a mashup -- The enclosure of science and technology: two case studies --
